--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "unicafe.ahojukka5.com"
+  "homepage": "https://unicafe.ahojukka5.com"
 }
