Add script to deploy to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "unicafe",
-  "version": "0.1.0",
-  "private": true,
+  "homepage": "https://unicafe.ahojukka5.com",
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +33,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://unicafe.ahojukka5.com"
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
