Change app url to ahojukka5.github.io/unicafe

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unicafe",
-  "homepage": "https://unicafe.ahojukka5.com",
+  "homepage": "http://ahojukka5.github.io/unicafe",
   "version": "1.0.0",
   "private": false,
   "dependencies": {
